--- a/src/houses/templates/houses/house_detail.html
+++ b/src/houses/templates/houses/house_detail.html
@@ -1,22 +1,17 @@
+{% extends 'index.html' %}
 {% load thumbnail %}
 
 
+{% block application %}
+    <a href="{% url 'home' %}">Главная</a>
+    <div>
+        <h1>{{ house.name }}</h1>
+        <div>{{ house.price }}</div>
+        <div>{{ house.description }}</div>
+        {% thumbnail house.photo '650x400' crop='center' as im %}
+            <img src="{{ im.url }}" alt="Дом {{ house.name }}" />
+        {% endthumbnail %}
+    </div>
+{% endblock %}
 
-<!DOCTYPE html>
-<html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <title>{{ house.name }}</title>
-    </head>
-    <body>
-        <a href="{% url 'home' %}">Главная</a>
-        <div>
-            <h1>{{ house.name }}</h1>
-            <div>{{ house.price }}</div>
-            <div>{{ house.description }}</div>
-            {% thumbnail house.photo '650x400' crop='center' as im %}
-                <img src="{{ im.url }}" alt="Дом {{ house.name }}" />
-            {% endthumbnail %}
-        </div>
-    </body>
-</html>
+<h2>Отзывы</h2>
