--- a/src/houses/templates/houses/house_detail.html
+++ b/src/houses/templates/houses/house_detail.html
@@ -12,6 +12,14 @@
             <img src="{{ im.url }}" alt="Дом {{ house.name }}" />
         {% endthumbnail %}
     </div>
+    <h2>Заявка</h2>
+    {% if sent %}
+        <p>Спасибо, Ваша заявка принята!</p>
+    {% endif %}
+    <form method="POST"> {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Отправить заявку</button>
+    </form>
 {% endblock %}
 
 <h2>Отзывы</h2>
