--- a/src/houses/templates/houses/houses_list.html
+++ b/src/houses/templates/houses/houses_list.html
@@ -1,14 +1,19 @@
 {% extends 'index.html' %}
 {% load thumbnail %}
+{% load humanize %}
 
 
 
 {% block application %}
     <h1>Список домов</h1>
+    <form method="GET">
+        {{ form.as_p }}
+        <button type="submit">Поиск</button>
+    </form>
     {% for house in houses %}
         <div>
             <h2><a href="{% url 'house' house_id=house.id %}">{{ house.name }}</a></h2>
-            <div>{{ house.price }}</div>
+            <div>{{ house.price|intcomma }} руб.</div>
             <div>{{ house.description }}</div>
             {% thumbnail house.photo '325x200' crop='center' as im %}
                 <img src="{{ im.url }}" alt="Дом {{ house.name }}" />
